some code changes